dev/sass/style.scss
/* ... */
@include bp(sml2){
	.banner {
		.tabs {
			padding-bottom:0;
		}
		.tabs li {
			display:inline-block;
		}
		.tabs li a, .tabs li.active span {
			display:inline-block; 
			&:before {
				position:absolute;
				background:darken($portfolio, 5%); 
				width:100%;
				height:100%;
				content:"";
				left:0;
				bottom:-100%;
				transition:bottom .25s;
			}
		}
		.tabs li.active a, .tabs li.active span {
			&:before {
				display:none;
			}
		}
		.tabs li:hover a:before, .tabs li.active:hover span:before {
			bottom:0;
		}
	}
}

@include bp(sml2) {
	.portfolio-item__screens {
		width:70%;
		margin:0 auto;
	}
}

@include bpBetween(sml2, med){ 
	.portfolio-item:first-child {
		margin-top:30px;
	}
}

@include bp(med) {

	.portfolio-item {
		font-size:8px;
		padding:3.0em;
	}

	.portfolio-item__screens.multiple {
		.portfolio-item__slide {
			padding-bottom:50px;
		}
	}

	.portfolio-item__slide {
		padding:30px;
	}

	.portfolio-item__screens {
		width:85%;
		margin:0 auto;
	}

}

@include bp(lrg) {

	.portfolio-item__screens {
		width:75%;
	}

}

@include bp(xlrg) {

	.portfolio-item {
		font-size:10px;
		padding:0 0 0 2%;

		&.odd:first-child {
			padding:2% 0 0 2%;
		}

		&.odd {
			padding:0 0 0 2%;
		}


		&.even{
			padding:0 2% 0 0;
			.portfolio-item__screens {
				float:right; 
			}
		}

		.container {
			width:100%;
			position:absolute;
			top:0;
			left:0;
			right:0;
			bottom:0;
			height:100%;
			margin-left:auto;
			margin-right:auto;
		}

		.portfolio-item__text {
			margin-top:0;
			margin-bottom:0;
			display:table;
			height:100%;
		}

		.portfolio-item__text-inner {
			display:table-cell;
			vertical-align:middle;
		}

	}

	.portfolio-item__screens {
		width:49%;
		float:left;
		position:relative;
		z-index:10;
	}

	.portfolio-item__controls {
		margin:13px auto;
	}

}

@include bpBetween(xlrg, xxxlrg){
	.portfolio-item.even .portfolio-item__text {
		margin-left:0;
	}
}


@include bp(xxxlrg) {
	.portfolio-item__controls {
		margin:28px auto;
	}

	.portfolio-item__screens.multiple {
		.portfolio-item__slide {
			padding-bottom:80px; 
		}
	}

	.portfolio-item__slide {
		padding:60px;
	}


}

//--------------------------------------------------------------------
// ARTICLES
//--------------------------------------------------------------------

.banner--articles {
	background:$articles;
}

.articles__list {
	margin-top:10.0em;
}

.article-item {
	&:last-child {
		border-bottom:0;
	}
	& h2 {
		margin-bottom:0;
	}
}

.article-item__date {
	@extend .copy;
}

.article-item__title {
	margin-bottom:1.5em;
	& a {
		font-weight:bold;
		text-decoration:none;
		position:relative;
		color:$type;
	}
	& a:hover {
		text-decoration:underline;
	}
}

.article-item .article-item__title {
	margin-bottom:0;
}

.article-navigation {
	display:none;
	@extend .copy;
	color:$type;
	font-weight:bold;
	&:before, &:after {
		background:$articles;
	}
}

.article-navigation--previous {
	float:left;
}

.article-navigation--next {
	float:right;
}

.article__body {
	margin-bottom:5em;
	@extend .copy;
	h2 {
		@extend .header--med;
	}
	h3 {
		@extend .header--sml;
	}
	pre {
		background:#262626;
		padding:12px;
		margin:30px 0;
		color:#fff;
		overflow:hidden;
	}
	code {
		font-size:90%;
		font-family:monospace;
		background-color:#efefef;
		margin:0 3px 0 1px;
		padding:0 5px 2px;
		border-radius:4px;
	}
	pre code {
		background-color:inherit;
		padding:0;
		margin:0;
		border-radius:0;
	}
	em {
		font-style:italic;
	}
	img {
		display:block;
		margin: 0 auto;
		width:100%;
		height:auto;
	}
	blockquote {
		margin:0 15px;
	}
}

hr {
	margin:1.5em -15px;
	background:$grey;
	height:2px;
}

.article-item + hr {
	margin:33px -15px 30px -15px;
}

.article-header {
	max-width:900px;
	margin-left:auto; 
	margin-right:auto;
	padding:0 15px;
	line-height:normal;
	text-transform:none !important;
}	

@include bp(med) {

	.articles__list {
		margin-top:8.0em;
	}

	.article__body {
		pre {
			margin:30px -30px;
		}
		blockquote {
			margin:0 30px;
		}
	}

	hr {
		margin:3.0em -30px;
	}

	.article-item + hr {
		margin:60px -30px 50px -30px;
	}


}

@include bp(xxxlrg) {

	.article-header {
		max-width:1499px;
	}

}

//--------------------------------------------------------------------
// LOADER
//--------------------------------------------------------------------

.loader {
	display:table;
	background:#fff;
	opacity:0;
	width:100%;
	height:100%;
	position:fixed;
	z-index:100;
	transition:opacity 0.5s;

	.loader-inner {
		display:table-cell;
		width:100%;
		height:100%;
		vertical-align:middle;
		text-align:center; 
	}

	.loader-icon {
	    display: inline-block;
	    width: 2em;
	    height: 2em;
	    border: .25em solid rgba(0,0,0,.1);
	    border-top-color: $about;
	    border-radius: 50%;
	    -webkit-animation: loading 1s infinite linear;
	    animation: loading 1s infinite linear;
	    margin: 2em;
	}

	@-webkit-keyframes loading {
	    100% {
	        transform: rotate(360deg);
	    }
	}

	@keyframes loading {
	    100% {
	        transform: rotate(360deg);
	    }
	}
}

.articles .loader .loader-icon {
	border-top-color: $articles;
}

.portfolio .loader .loader-icon {
	border-top-color: $portfolio;
}

.contact .loader .loader-icon {
	border-top-color: $contact;
}

body.loading .loader {
	opacity:1.0;
}

html.no-cssanimations .loader {
	display:none !important;
	opacity:0 !important;
	visibility:hidden !important;
}	


//--------------------------------------------------------------------
// HIDE IE8 FALLBACKS
//--------------------------------------------------------------------

html.svg .no-svg {
	display:none;
}

